--- a/teste.ipynb
+++ b/teste.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "caf2d285-3009-4a3e-8a1b-b335149abb5f",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
    ],
    "source": [
     "# Loading documents em pdf\n",
-    "%pip install -qU pypdf"
+    "%pip install -qU langchain_community pypdf pillow"
    ]
   },
   {
@@ -236,15 +236,17 @@
    "outputs": [],
    "source": [
     "# Loading documents em pdf\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_community.document_loaders import PyPDFDirectoryLoader\n",
     "\n",
-    "loader = PyPDFLoader(file_path)\n",
-    "pages = []\n",
-    "async for page in loader.alazy_load():\n",
-    "    pages.append(page)\n",
+    "directory_path = (\n",
+    "    \"../../docs/integrations/document_loaders/example_data/layout-parser-paper.pdf\"\n",
+    ")\n",
+    "loader = PyPDFDirectoryLoader(\"example_data/\")\n",
     "\n",
-    "print(f\"{pages[0].metadata}\\n\")\n",
-    "print(pages[0].page_content)"
+    "docs = loader.load()\n",
+    "docs[0]\n",
+    "\n",
+    "print(docs[0].metadata)"
    ]
   },
   {
@@ -260,7 +262,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
