--- a/teste.ipynb
+++ b/teste.ipynb
@@ -252,6 +252,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd268872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Splitting documents (testar pra ver se o msm do exemplo de rag funciona pro pyPDFDirectoryLoader)\n",
+    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "text_splitter = RecursiveCharacterTextSplitter(\n",
+    "    chunk_size=1000,  # chunk size (characters)\n",
+    "    chunk_overlap=200,  # chunk overlap (characters)\n",
+    "    add_start_index=True,  # track index in original document\n",
+    ")\n",
+    "all_splits = text_splitter.split_documents(docs)\n",
+    "\n",
+    "print(f\"Split pdf into {len(all_splits)} sub-documents.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28e582b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Storing documents\n",
+    "document_ids = vector_store.add_documents(documents=all_splits)\n",
+    "\n",
+    "print(document_ids[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "23293bcc-1879-49b3-81c6-26d576f3c41c",
    "metadata": {},
    "outputs": [],
