arrumando chave da api

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "72acd2ef-9d22-48d1-b360-26796abfb325",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,8 @@
     }
    ],
    "source": [
-    "pip install -qU \"langchain[mistralai]\""
+    "# pip install -qU \"langchain[mistralai]\"\n",
+    "pip install -U langchain-core langchain-mistralai"
    ]
   },
   {
@@ -149,7 +150,7 @@
     "LANGSMITH_ENDPOINT=\"https://api.smith.langchain.com\"\n",
     "LANGSMITH_API_KEY=\"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\"\n",
     "LANGSMITH_PROJECT=\"pr-clear-boutique-29\"\n",
-    "MISTRAL_API_KEY=\"\"pixtral-12b-2409\"client = Mistral(api_key = V4ZZ0MqgB08SJtCEup4MPAohR4pK8htc)\""
+    "MISTRAL_API_KEY=\"V4ZZ0MqgB08SJtCEup4MPAohR4pK8htc\""
    ]
   },
   {
