troca do modelo do pixtral para mistral small

--- a/teste.ipynb
+++ b/teste.ipynb
@@ -181,7 +181,7 @@
     "\n",
     "from langchain.chat_models import init_chat_model\n",
     "\n",
-    "llm = init_chat_model(\"pixtral-12b-2409\", model_provider=\"mistralai\")"
+    "llm = init_chat_model(\"mistral-small-2503\", model_provider=\"mistralai\")"
    ]
   },
   {
